// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when validating domain entity has merge property and entity is wrong -> message 1`] = `"Merge statement UnknowEntity.PropertyName1 must be a valid path. No Property PropertyName1 was found"`;

exports[`when validating domain entity has merge property and entity is wrong -> sourceMap 1`] = `
Object {
  "column": 10,
  "line": 20,
  "tokenText": "UnknowEntity",
}
`;

exports[`when validating domain entity has merge property and property is wrong -> message 1`] = `"Merge statement DomainEntityName1.UnknownProperty must be a valid path. No Property UnknownProperty was found"`;

exports[`when validating domain entity has merge property and property is wrong -> sourceMap 1`] = `
Object {
  "column": 10,
  "line": 20,
  "tokenText": "DomainEntityName1",
}
`;
